Add another component to make a proper grid

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,14 @@ body {
     padding-left: 30px;
   }
   
+  .grid-row {
+    float: left;
+  }
+
+  .grid-row:after {
+      clear: both;
+  }
+  
   .board-row:after {
     clear: both;
     content: "";
