--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ body {
     text-align: center;
     width: 34px;
   }
+
+  .square {
+      font-size: 14px;
+  }
   
   .square:focus {
     outline: none;
