Start building a grid

--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,11 @@ ul {
     width: 34px;
 }
 
+.possibilities {
+    color: grey;
+    font-size: 12px;
+}
+
 .number:focus {
     outline: none;
 }
